fix(popup): inconsistent overflow problem

--- a/packages/popup/src/index.scss
+++ b/packages/popup/src/index.scss
@@ -2,11 +2,12 @@ html,
 body,
 #root {
   height: 100%;
+  overflow: hidden;
 }
 
 body {
   margin: 0;
-  min-height: 292px; // helps with flashing between tab changes
+  min-height: 500px; // helps with flashing between tab changes
 }
 
 #root {
